--- a/codemcp.toml
+++ b/codemcp.toml
@@ -31,7 +31,7 @@ Do not bump the version more than once per branch.
 """
 
 [commands.format]
-command = ["./agents/run_format.sh"]
+command = ["./run_format.sh"]
 doc = "Accepts the name of the files that need formatting as arguments"
 
 [commands.branch_log]
