--- a/codemcp.toml
+++ b/codemcp.toml
@@ -44,7 +44,7 @@ directories
 """
 
 [commands.branch_changed_files]
-command = ["git", "diff", "--name-only", "origin/master...HEAD", "--"]
+command = ["git", "diff", "--name-only", "origin/main...HEAD", "--"]
 doc = """
 List the file names that have been changed in this branch
 
