left TODOs for claudia

--- a/codemcp.toml
+++ b/codemcp.toml
@@ -63,6 +63,8 @@ Use "git show" to show the changes of a commit ot range of commits
 # Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 verbosity = "DEBUG"
 
+[commands.test]
+command = ["nix", "flake", "check"]
 
 [commands.agent-vm]
 command = ["nix", "run", "--show-trace", ".#", "--"]
