feat: continue agent-vm development based on documentation
read AGENT_ISOLATION.md and .TODO.md closely. We're going to continue with this where the user will tell you. Continue where the TODO.md, ARCHITECTURE.md and other .md docs tell you

```git-revs
8d78463  (Base revision)
8e85d5b  Fix nested programs.programs.ruff configuration error
0e87a2e  Fix unescaped backslashes in pyproject.toml coverage exclude patterns
42dd367  Add setuptools and wheel to nativeBuildInputs for agent-vm package
7d5832d  Fix setuptools package configuration in pyproject.toml
d600654  Fix package name and setuptools configuration to match directory structure
576a01f  Update setuptools to use py_modules instead of packages for simple module structure
39e5c8e  Update import to use vm_controller module directly
9578aa1  Update imports in integration test file
c8e5d0b  Update imports in unit test file
de9f15a  Update Python imports check to match new module structure
5a0cc89  Update coverage source to match new module structure
a3e3d79  Mark Step 13 as complete and update current status
42c2278  Update current implementation status to reflect Step 13 completion
e4d6dba  Improve logging with colored output and better formatting
f3662cc  Improve _wait_for_vm_ready with progress indicators and colored output
fc3d1d2  Improve _wait_for_agent_ready with progress indicators and colored output
11ffff2  Improve log messages in start_vm with emojis and better guidance
cb6364a  Add --verbose flag to main parser for detailed logging
9fa50cc  Set up logging based on verbose flag after parsing arguments
663b106  Improve create_vm log messages with emojis and better guidance
c9f97b1  Improve VM startup error handling with better cleanup and user guidance
69f1244  Improve agent service startup with better error handling and recovery
a2d180d  Mark Step 14 as complete and add error handling improvements
HEAD     Update current implementation status to reflect Steps 14-15 completion
```

codemcp-id: 12-feat-c

--- a/agent_vm/pyproject.toml
+++ b/agent_vm/pyproject.toml
@@ -40,7 +40,7 @@ test = [
 ]
 
 [project.scripts]
-agent-vm = "agent_vm:main"
+agent-vm = "vm_controller:main"
 
 [project.urls]
 Homepage = "https://github.com/example/agent-vm"
@@ -48,12 +48,8 @@ Documentation = "https://github.com/example/agent-vm#readme"
 Repository = "https://github.com/example/agent-vm.git"
 "Bug Tracker" = "https://github.com/example/agent-vm/issues"
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["agent_vm*"]
-
-[tool.setuptools.package-dir]
-agent_vm = "."
+[tool.setuptools]
+py-modules = ["vm_controller"]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
@@ -95,6 +91,6 @@ exclude_lines = [
     "raise NotImplementedError",
     "if 0:",
     "if __name__ == .__main__.:",
-    "class .*\bProtocol\):",
-    "@(abc\.)?abstractmethod",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
 ]
