fix: add timeout to integration tests and address blocking issues
read *.md docs closely. We're going to continue with this where the user will tell you.

```git-revs
5d98df5  (Base revision)
c6636c1  Snapshot before auto-branch_log
6ec4465  Add timeout parameter to integration test constructor
14a24a8  Update run_agent_vm_command to use instance timeout as default
fe80eed  Remove hardcoded timeout from VM start test and use default timeout
e73ab42  Add timeout argument to argument parser
6716e37  Pass timeout parameter to test runner constructor
26c77ab  Update help text to include timeout option example
4dc1742  Add current fix tasks to TODO.md
1ee8d23  Fix variable assignment bugs in start.sh
d839e2f  Complete MCP server configuration in start.sh
ef6d4da  Fix user/group configuration in agent service to match dev user
9c2a13d  Fix shell configuration to include all MCP tools
6e410a4  Remove circular dependency in agent-service.nix shell configuration
5699a90  Fix user group creation to avoid conflicts with existing dev user
HEAD     Mark critical issues as completed in TODO.md
```

codemcp-id: 15-fix-add-timeout-to-integration-tests-and-address-b

--- a/codemcp.toml
+++ b/codemcp.toml
@@ -1,18 +1,18 @@
 # codemcp configuration file
 project_prompt = """
 # Instructions
-- MUST use the agent-vm command frequently to test your changes and fix them
+- MUST use the test command frequently to test your changes and fix them
+- MUST use the integration-test command less frequently to test your changes and fix them
 - You cannot modify anything outside ./, or  Capisce?!
 - Don't use nix-build, nix-instantiate, etc.. use the modern "nix" command.
 - Don't use "<nixpkgs>", always use the flake in this repo as the "pkgs" set
-- Before starting work, add what you're going to do to the TODO.md
-document if it is not already there.
-- Keep the AGENT_ISOLATION.md document and TODO.md up to date with
-your changes when you're done with them.
-- Use the 'branch_log' command before starting work to see where you left off.
-Ignore changes to codemcp.toml and under the ./ directory.
 - When leaving code incomplete, stubbed or mocked. Write a FIXME or TODO comment
 explaining why.
+- Before starting work, add what you're going to do to the TODO.md
+document if it is not already there.
+- Use the 'branch_log' command before starting work to see where you left off.
+Ignore changes to codemcp.toml and under the ./ directory.
+- Keep the *.md documents up to date with your changes when you're done with them.
 
 ## Final tasks
 
@@ -65,6 +65,12 @@ verbosity = "DEBUG"
 
 [commands.test]
 command = ["nix", "flake", "check"]
+
+[commands.integration-test]
+command = ["nix", "run", ".#integration-test", "--"]
+doc = """
+Runs the .#integration-test flake app with the arguments you pass"
+"""
 
 [commands.git_mv]
 command = ["git", "mv"]
