feat: continue urgent tasks from TODO.md
Continue with the URGENT tasks in TODO.md. There is a typo, where it says "Refactor to use use type for CLI", it means use the "typer" package.

```git-revs
376a52f  (Base revision)
497e1d2  Add typer dependency for modern CLI framework
895aeb8  Replace argparse import with typer
8cbacf7  Replace argparse-based main function with typer CLI implementation
491e6a3  Snapshot before codemcp change
a4cff4e  Fix bare except clause in cleanup function
4412c42  Fix bare except clause in agent status check
514bb36  Move typer to runtime dependencies and update comment
200ad51  Remove typer from nativeBuildInputs since it's now in propagatedBuildInputs
a1883f2  Mark CLI refactoring to typer as completed
d0f1d39  Add port probing functionality for dynamic SSH port allocation
f9bc69c  Add socket to imports and fix typing imports
0c005cd  Remove duplicate socket import
650c12f  Add dynamic SSH port allocation in create_vm method
35e4eeb  Use dynamic SSH port in VM configuration template
5d9900c  Use dynamic SSH port in VM configuration template
18ed22a  Update _wait_for_vm_ready to use dynamic SSH port
795a313  Update _wait_for_vm_ready method signature to accept SSH port
505befa  Use dynamic SSH port in _wait_for_vm_ready SSH command
fc06404  Pass SSH port to _start_agent_in_vm method
39b62a5  Update _start_agent_in_vm method signature to accept SSH port
18e052d  Update first SSH command in _start_agent_in_vm to use dynamic SSH port
0e6e588  Update second SSH command in _start_agent_in_vm to use dynamic SSH port
f089bd3  Update third SSH command in _start_agent_in_vm to use dynamic SSH port
1416b73  Pass SSH port to _wait_for_agent_ready method
ba6e35e  Update _wait_for_agent_ready method signature to accept SSH port
25a6072  Update SSH command in _wait_for_agent_ready to use dynamic SSH port
04eea2e  Update vm_shell method to use dynamic SSH port from configuration
5f0eef6  Update vm_logs method to use dynamic SSH port from configuratio

--- a/agent_vm/pyproject.toml
+++ b/agent_vm/pyproject.toml
@@ -27,8 +27,10 @@ classifiers = [
     "Topic :: System :: Virtualization",
 ]
 
-# Runtime dependencies - Python stdlib only for main functionality
-dependencies = []
+# Runtime dependencies
+dependencies = [
+    "typer>=0.9.0",
+]
 
 # Optional test dependencies
 [project.optional-dependencies]
