feat: continue with next TODO task
Continue with the next task on the TODO.md document

```git-revs
be16833  (Base revision)
7fda29b  Fix _check_mcp_proxy_health method signature and hardcoded SSH port
b212498  Fix _check_workspace_status method signature and hardcoded SSH port
3f07966  Snapshot before auto-integration-test
0e250e8  Fix _is_vm_running to not log pgrep failures as errors when no VMs are running
fc64d10  Use subprocess.run directly in _is_vm_running to avoid error logging when no VM processes exist
HEAD     Update TODO.md with progress on Step 29 agent service status reporting debug
```

codemcp-id: 38-feat-continue-with-next-todo-task

--- a/codemcp.toml
+++ b/codemcp.toml
@@ -63,7 +63,7 @@ verbosity = "DEBUG"
 command = ["nix", "flake", "check"]
 
 [commands.integration-test]
-command = ["nix", "run", ".#integration-test", "--"]
+command = ["nix", "run", ".#integration-test"]
 doc = """
 Runs the .#integration-test flake app with the arguments you pass"
 
@@ -79,7 +79,7 @@ Use it to move files around efficiently
 """
 
 [commands.agent-vm]
-command = ["nix", "run", "--show-trace", ".#", "--"]
+command = ["nix", "run", "--show-trace", ".#"]
 doc = """
 Calls "nix run .# --" which runs ./agent-vm.py
 
