--- a/codemcp.toml
+++ b/codemcp.toml
@@ -67,21 +67,15 @@ command = ["nix", "run", ".#integration-test"]
 doc = """
 Runs the .#integration-test flake app with the arguments you pass"
 
+Arguments are passed to the python script. Make sure you quote them properly!
+
 Max --timeout you can add is 30s. This machine is fast
 """
 
-[commands.git_mv]
+[commands.git-mv]
 command = ["git", "mv"]
 doc = """
 git mv
 
 Use it to move files around efficiently
-"""
-
-[commands.agent-vm]
-command = ["nix", "run", "--show-trace", ".#"]
-doc = """
-Calls "nix run .# --" which runs ./agent-vm.py
-
-Arguments are passed to the python script. Make sure you quote them properly!
 """
