--- a/codemcp.toml
+++ b/codemcp.toml
@@ -64,7 +64,7 @@ verbosity = "DEBUG"
 command = ["nix", "flake", "check"]
 
 [commands.integration-test]
-command = ["nix", "run", ".#integration-test"]
+command = ["nix", "run", ".#integration-test", "--"]
 doc = """
 Runs the .#integration-test flake app with the arguments you pass"
 
