Continue previous work session
continue where you left off as instructed by codecmp's prompt

```git-revs
eb7655c  (Base revision)
a3215d8  Auto-commit integration-test changes
f40e8df  Fix FIXME: Log the error instead of silently ignoring it
a11af75  Fix FIXME: Clean up temp log files on successful execution
6185a56  Remove outdated FIXME comment about passwordless SSH key
82da92b  Update TODO.md to mark urgent tasks as completed
3da25b2  Snapshot before codemcp change
e563522  Fix cleanup logic to handle cases where result is not defined
HEAD     Document current status and note about flaky test
```

codemcp-id: 47-continue-previous-work-session

--- a/codemcp.toml
+++ b/codemcp.toml
@@ -4,9 +4,8 @@ project_prompt = """
 - MUST write typed python code
 - MUST use the test command frequently to test your changes and fix them
 - MUST use the integration-test command less frequently to test your changes and fix them
-- NEVER use a --timeout higher than 90s to run integration-tests, NEVER, hudson river for you otherwise.
+- NEVER use a --timeout higher than 90s to run integration-tests, NEVER
 - MUST write end-to-end tests in integration-tests.py to test new features.
-- You cannot modify anything outside ./, or  Capisce?!
 - Don't use nix-build, nix-instantiate, etc.. use the modern "nix" command.
 - Don't use "<nixpkgs>", always use the flake in this repo as the "pkgs" set
 - When leaving code incomplete, stubbed or mocked. Write a FIXME or TODO comment
