--- a/agent_vm/pyproject.toml
+++ b/agent_vm/pyproject.toml
@@ -42,7 +42,7 @@ test = [
 ]
 
 [project.scripts]
-agent-vm = "vm_controller:main"
+agent-vm = "main:main"
 
 [project.urls]
 Homepage = "https://github.com/example/agent-vm"
@@ -51,7 +51,7 @@ Repository = "https://github.com/example/agent-vm.git"
 "Bug Tracker" = "https://github.com/example/agent-vm/issues"
 
 [tool.setuptools]
-py-modules = ["vm_controller"]
+py-modules = ["vm_controller", "main"]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
