refactor: continue refactoring work
Help me out finish off the refactor I began in this branch, pretty please

```git-revs
3db677e  (Base revision)
2fc2b7a  Move CLI commands from vm_controller.py to main.py
7c863f8  Remove CLI code from vm_controller.py and clean up imports
5621d29  Update VMController to accept timeout parameter
b278606  Remove all CLI code from the end of vm_controller.py
31dfef6  Replace first _get_global_timeout() with self.timeout in VM build operations
aae9517  Replace second _get_global_timeout() with self.timeout in start_vm method
3122524  Replace third _get_global_timeout() with self.timeout in VM build fallback
996bd8d  Replace _get_global_timeout usage in _wait_for_vm_ready method
bbd3f62  Replace _get_global_timeout usage in _wait_for_agent_ready method
923de6c  Replace _get_global_timeout in error message in _wait_for_vm_ready
a53b0bd  Replace _get_global_timeout in error message in _wait_for_agent_ready
d43ba5b  Replace _get_global_timeout usage in service check SSH commands
51d6a67  Replace _get_global_timeout usage in status check SSH commands
664600e  Replace _get_global_timeout usage in agent start SSH commands
cf02422  Replace _get_global_timeout usage in _check_ssh_connectivity method
140173e  Replace _get_global_timeout usage in _check_agent_service_detailed method
91decc5  Replace _get_global_timeout usage in _check_mcp_proxy_health method
305d3b5  Replace _get_global_timeout usage in _check_workspace_status method
00d382f  Update CLI commands to pass timeout to VMController
a5307b7  Update pyproject.toml entry point and modules
2cd328f  Remove explicit py-modules since we're using package structure
d6a578c  Move agent_vm/pyproject.toml -> pyproject.toml: Move pyproject.toml to root directory
4856623  Fix agent-vm source path in overlay.nix
97da0a0  Update Python imports check and test coverage in overlay.nix
42af80c  Auto-commit test changes
d2d5c43  Snapshot before auto-integration-test
HEAD     Mark CLI refactor as complet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ test = [
 ]
 
 [project.scripts]
-agent-vm = "main:main"
+agent-vm = "agent_vm.main:main"
 
 [project.urls]
 Homepage = "https://github.com/example/agent-vm"
@@ -51,7 +51,7 @@ Repository = "https://github.com/example/agent-vm.git"
 "Bug Tracker" = "https://github.com/example/agent-vm/issues"
 
 [tool.setuptools]
-py-modules = ["vm_controller", "main"]
+packages = ["agent_vm"]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
