fix: make haskell package compile
I want you to run `haskell_test` and make the package compile

```git-revs
4f46116  (Base revision)
e828e3b  Add containers dependency for Map and Set
d32629b  Remove Colog.Core import and define LogAction and Severity types locally
24742d0  Add ExistentialQuantification language extension
52c19d3  Remove invalid 'type' field from executable section
dff221c  Create integration-test Main.hs
7d1816c  Fix export conflicts by using explicit export lists
ac7d3c5  Fix exports to match actual module contents and add DuplicateRecordFields
159bbeb  Export AgentVmTrace constructors individually to avoid NixBuildFailed conflict
05e5c23  Add OverloadedStrings extension to fix Text literal issue
081091e  Add OverloadedStrings extension to fix Text literal issue
HEAD     Remove duplicate OverloadedStrings pragma
```

codemcp-id: 73-fix-make-haskell-package-compile

--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -29,6 +29,7 @@ library
                     , async
                     , unliftio
                     , stm
+                    , containers
                     , unordered-containers
                     , text
                     , bytestring
@@ -80,7 +81,6 @@ test-suite spec
 -- This one does not run as part of the hermetic test suite
 executable agent-vm-test
     import:           warnings
-    type:             exitcode-stdio-1.0
     main-is:          Main.hs
     build-depends:    base
                     , hspec
