--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -10,10 +10,18 @@ category:           System
 build-type:         Simple
 
 common warnings
-    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
-                 -Wincomplete-uni-patterns -Wmissing-export-lists
-                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
-                 -Werror -Wunused-packages
+    ghc-options: -Wall
+                 -Werror
+                 -Wcompat
+                 -Widentities
+                 -Wincomplete-record-updates
+                 -Wincomplete-uni-patterns
+                 -Wmissing-export-lists
+                 -Wmissing-home-modules
+                 -Wpartial-fields
+                 -Wredundant-constraints
+                 -Wunused-packages
+                 -Wmissing-import-lists
 
 library
     import:           warnings
