--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -22,6 +22,7 @@ common warnings
                  -Wredundant-constraints
                  -Wunused-packages
                  -Wmissing-import-lists
+                 -Wno-unused-packages
 
 library
     import:           warnings
@@ -42,6 +43,8 @@ library
                     , ansi-terminal
                     , directory
                     , time
+                    , typed-process
+                    , filepath
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -61,7 +64,6 @@ test-suite spec
     main-is:          Spec.hs
     other-modules:    AgentVM.StateSpec
                     , AgentVM.ProcessSpec
-                    , AgentVM.IntegrationSpec
     build-depends:    base
                     , agent-vm
                     , hspec
@@ -75,6 +77,9 @@ executable agent-vm-test
     import:           warnings
     main-is:          Main.hs
     build-depends:    base
+                    , agent-vm
+                    , hspec
+                    , temporary
     hs-source-dirs:   integration-test
     default-language: Haskell2010
     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
