feat: complete urgent TODO items
Read TODO.md and finish the URGENT todos, just those ones

```git-revs
d5f333b  (Base revision)
20e12ac  Add protolude dependency to library
9cb7968  Add NoImplicitPrelude extension to library
6226a84  Add protolude and NoImplicitPrelude to agent-vm executable
e690ac1  Add protolude and NoImplicitPrelude to test-suite
db821e2  Add protolude and NoImplicitPrelude to agent-vm-test executable
a7f2baa  Add Protolude import to AgentVM.hs
cad22af  Add Protolude import to Types.hs
85b26ea  Add Protolude import to State.hs
a356140  Add Protolude import to Process.hs
f283723  Add Protolude import to SSH.hs
f293acb  Add Protolude import to Nix.hs
984a1ad  Add Protolude import to Log.hs
114a98b  Add Protolude import to Config.hs
2dccad6  Add Protolude import to Main.hs
45ad025  Add Protolude import to StateSpec.hs
2129622  Add Protolude import to ProcessSpec.hs
c0ca6cf  Add Protolude import to integration test Main.hs
faade00  Fix imports in Types.hs - add explicit import lists and remove redundant imports
ce26318  Snapshot before auto-cabal_test
d1f5ad6  Fix Protolude import list in Types.hs
HEAD     Fix Protolude import in State.hs to include error function
```

codemcp-id: 82-feat-complete-urgent-todo-items

--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -35,6 +35,7 @@ library
                     , AgentVM.Log
                     , AgentVM.Config
     build-depends:    base
+                    , protolude
                     , stm
                     , containers
                     , text
@@ -47,15 +48,18 @@ library
                     , filepath
     hs-source-dirs:   src
     default-language: Haskell2010
+    default-extensions: NoImplicitPrelude
 
 executable agent-vm
     import:           warnings
     main-is:          Main.hs
     build-depends:    base
+                    , protolude
                     , agent-vm
                     , optparse-applicative
     hs-source-dirs:   app
     default-language: Haskell2010
+    default-extensions: NoImplicitPrelude
     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
 
 test-suite spec
@@ -65,10 +69,12 @@ test-suite spec
     other-modules:    AgentVM.StateSpec
                     , AgentVM.ProcessSpec
     build-depends:    base
+                    , protolude
                     , agent-vm
                     , hspec
     hs-source-dirs:   test
     default-language: Haskell2010
+    default-extensions: NoImplicitPrelude
     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
     build-tool-depends: hspec-discover:hspec-discover
 
@@ -77,9 +83,11 @@ executable agent-vm-test
     import:           warnings
     main-is:          Main.hs
     build-depends:    base
+                    , protolude
                     , agent-vm
                     , hspec
                     , temporary
     hs-source-dirs:   integration-test
     default-language: Haskell2010
+    default-extensions: NoImplicitPrelude
     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
